Closed Bug 1687268 Opened 5 years ago Closed 5 years ago

Crash in [@ -[ChildView pasteboard:item:provideDataForType:]]

Categories

(Core :: Widget: Cocoa, defect)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- wontfix
firefox85 --- wontfix
firefox86 --- fixed

People

(Reporter: gsvelto, Assigned: spohl)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/75c58d80-64d9-44a6-8dff-e08360210116

Reason: EXC_BAD_ACCESS / EXC_I386_GPFLT

Top 10 frames of crashing thread:

0 XUL -[ChildView pasteboard:item:provideDataForType:] widget/cocoa/nsChildView.mm:4512
1 AppKit __68-[NSPasteboard _setOwner:forTypes:atIndex:selector:usesPboardTypes:]_block_invoke 
2 CoreFoundation -[_CFPasteboardEntry resolveLocalPromisedData] 
3 CoreFoundation ___CFPasteboardHandleFulfillMessage_block_invoke_2 
4 CoreFoundation __CFRUNLOOP_IS_CALLING_OUT_TO_A_BLOCK__ 
5 CoreFoundation __CFRunLoopDoBlocks 
6 CoreFoundation __CFRunLoopRun 
7 CoreFoundation CFRunLoopRunSpecific 
8 CoreFoundation CFPasteboardResolveAllPromisedData 
9 CoreFoundation __CFNOTIFICATIONCENTER_IS_CALLING_OUT_TO_AN_OBSERVER__ 

Hard to tell what's going on here but it seems related to the clipboard maybe? Almost all the crashes have the following message in the app notes:

Obj-C Exception data:
NSInvalidArgumentException: *** -[__NSPlaceholderDictionary initWithObjects:forKeys:count:]: attempt to insert nil object from objects[0]
Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED
Attachment #9197825 - Attachment is obsolete: true
Attachment #9197825 - Attachment is obsolete: false
Pushed by spohl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/48178057c74a Prevent Obj-C exceptions caused by attempts to insert NULL objects into a dictionary. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Blocks: 1693202
Blocks: 1693872
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: