Bug 1687268: Prevent Obj-C exceptions caused by attempts to insert NULL objects into a dictionary. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D102235